Fix failure and error on steps