@@ -73,6 +73,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
         <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
           <!-- Wajib untuk JUnit Platform + Cucumber berjalan -->
           <includes>
             <include>**/*Test.java</include>
